# vim: set noexpandtab:

2014-02-06 Steve
	* Added getBTagSFJets2Lep to SusyNtTools which returns
	  the subset of baseline jets which are tested for the b-veto.
	  These are thus the jets to be passed to the bTagSF method.

2014-02-05 Steve
	* Added MCID and proc ID to Event.print()
	* Changed from hardcoded values to JET_JVF_PT and JET_JVF_ETA in isSignalJet
	* Added template method, dumpObjects, for looping and dumping any 
	  objects with a print() method.

2014-01-29 Steve
	* Added bugfix to getCrossSection for Wh nohadtau signal samples
		* proc ID (susyFinalState) was not saved correctly
		* I will work on redesigning the approach upstream to
		  prevent similar future issues
	* Cleaned up mljj method
	* Added MCID and prod ID to Event.print()
	* Added Met.sumet to the copy constructor and assignment operator (was missing)
	* Added scripts/refreshSUSYToolsData.sh to update SUSYTools/data to trunk

2014-01-22 Steve
	* Fixed SusyNtTools getEventWeight to use 0 when proc ID -1 is found

2014-01-22 Anyes
	* Added functions for mljj 
	* Update 2LSSWh isolation cuts to tighter set (not backward compatible)

2014-01-22 Steve
	* Fixed SusyNtAna getEventWeight
		* Added useProcSumw argument. Order of args has changed,
		  so be careful!

2014-01-17 Steve
	* Changed default value of susyFinalState to 0 to be consistent with SUSYTools
	* Changed order of Hdecay enum in WhTruthExtractor. kUnknown is now 0 to be
	  consistent with susyFinalState and SUSYTools.
	* Added empty MCWeighter class definition which will handle the MC normalization
		* At the moment it only holds the sys enum
	* Added cross section systematic to getEventWeight methods

2014-01-16 Anyes
	* Added SusyDefs: human readable analysis type
	* Added SusyNtAna function to get/set sumw map
	* Added SystNtTools overload function for hasZ and getMT2

2014-01-07 Steve
	* Added clarification comments for the sumw map update of last commit
	* Fixed usage of proc ID when retrieving the sumw

2014-01-04 Steve